# todo

./: .env.example  DESIGN.md  NOTICE.md  README.md  Readme.md  api.py  compose.dev.yaml  compose.yaml  docker-compose.yaml  readme.md  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/app/: auth.py  config.py  database.py  email_utils.py  main.py  models.py  schemas.py  utils.py
backend/app/routes/: auth.py  list.py  system.py  user.py  workspace.py
backend/app/schemas/: auth.py  list.py  user.py  workspace.py
backend/app/templates/: password_reset.html  password_reset_confirmation.html
backend/routers/: list.py  system.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/app/: App.tsx  dnd.tsx
frontend/src/app/api/: aiMock.ts  client.ts  mock.ts
frontend/src/app/auth/: AuthContext.tsx
frontend/src/app/components/ai/: AIHistoryPage.tsx  ChatBody.tsx  FloatingChat.tsx  MCPExplorerPage.tsx
frontend/src/app/components/auth/: AuthShell.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ProtectedRoute.tsx  ResetPasswordPage.tsx  SignupPage.tsx
frontend/src/app/components/brand/: CairnMark.tsx
frontend/src/app/components/notes/: QuickNotes.tsx
frontend/src/app/components/settings/: AISettingsTab.tsx  MCPSettingsTab.tsx  PrivacySettingsTab.tsx  (+4 more)
frontend/src/app/state/: AIContext.tsx  AppDataContext.tsx  ThemeContext.tsx
frontend/src/styles/: fonts.css  index.css  theme.css
(+12 files in other folders)
