[project]
name = "todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.1",
    "beanie<2.0",
    "fastapi[standard]>=0.136.3",
    "motor<3.7",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymongo<4.10",
]
